docs(issue-005): categories
